# protopuddlepp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h  constants.h  drawpanel.cpp  drawpanel.h  entities.cpp  entities.h  gene.h  genesframe.cpp  genesframe.h  main.cpp  properties.h  properties_singleton.h  propertiesdialog.cpp  propertiesdialog.h  random.h
doc/: description-eng.txt  description-rus.txt
resources/: default_config.json
